--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "sql-template-tag": "^5.0.3"
   },
   "devDependencies": {
